改api为rest, 改分页data,优化显示间距

--- a/src/locales/zh-cn.json
+++ b/src/locales/zh-cn.json
@@ -3,47 +3,32 @@
   "menu.account.center": "个人中心",
   "menu.account.settings": "个人设置",
   "menu.account.logout": "退出登录",
-  "pages.login.accountLogin.tab": "账户密码登录",
-  "pages.login.accountLogin.errorMessage": "错误的用户名和密码",
-  "pages.login.failure": "登录失败，请重试！",
-  "pages.login.success": "登录成功！",
-  "pages.login.username.placeholder": "用户名",
-  "pages.login.username.required": "用户名是必填项！",
-  "pages.login.password.placeholder": "密码",
-  "pages.login.password.required": "密码是必填项！",
-  "pages.login.phoneLogin.tab": "手机号登录",
-  "pages.login.phoneLogin.errorMessage": "验证码错误",
-  "pages.login.phoneNumber.placeholder": "请输入手机号！",
-  "pages.login.phoneNumber.required": "手机号是必填项！",
-  "pages.login.phoneNumber.invalid": "不合法的手机号！",
-  "pages.login.captcha.placeholder": "请输入验证码！",
-  "pages.login.captcha.required": "验证码是必填项！",
-  "pages.login.phoneLogin.getVerificationCode": "获取验证码",
-  "pages.getCaptchaSecondText": "秒后重新获取",
-  "pages.login.rememberMe": "自动登录",
-  "pages.login.forgotPassword": "忘记密码 ?",
-  "pages.login.submit": "登录",
-  "pages.login.loginWith": "其他登录方式 :",
-  "pages.login.registerAccount": "注册账户",
-  "pages.welcome.link": "欢迎使用",
+
   "message.network-error": "网络连接异常,请稍后再试!",
-  "message.status-400": "请求错误(400)",
-  "message.status-401": "登录已过期，请重新登录(401)",
-  "message.status-403": "拒绝访问(403)",
-  "message.status-404": "请求出错(404)",
-  "message.status-408": "请求超时(408)",
-  "message.status-500": "服务器错误(500)",
-  "message.status-501": "服务未实现(501)",
-  "message.status-502": "网络错误(502)",
-  "message.status-503": "服务不可用(503)",
-  "message.status-504": "网络超时(504)",
-  "message.status-default": "连接出错({0})!",
+  "status-400": "请求错误(400)",
+  "status-401": "登录已过期，请重新登录(401)",
+  "status-403": "拒绝访问(403)",
+  "status-404": "请求出错(404)",
+  "status-408": "请求超时(408)",
+  "status-500": "服务器错误(500)",
+  "status-501": "服务未实现(501)",
+  "status-502": "网络错误(502)",
+  "status-503": "服务不可用(503)",
+  "status-504": "网络超时(504)",
+  "status-default": "连接出错({0})!",
   "HTTP版本不受支持(505)": "HTTP版本不受支持(505)",
   
-  
-  "手机号": "手机号",
-  "请输入手机号!": "请输入手机号!",
+  "欢迎": "欢迎",
   "用户名": "用户名",
+  "密码": "密码",
+  "验证码": "验证码",
+  "请输入": "请输入 ",
+  "忘记密码": "忘记密码",
+  "记住我": "记住我",
+  "登录": "登录",
+  "绑定验证码": "绑定验证码",
+  "请输入密码!": "请输入密码!",
+  "请输入手机号码!": "请输入手机号码!",
   "请输入用户名!": "请输入用户名!",
   "排序": "排序",
   "请输入排序!": "请输入排序!",
@@ -66,10 +51,8 @@
   "编辑": "编辑",
   "删除": "删除",
   "确定删除{slot1}吗?": "确定删除'{{slot1}}'吗?",
-  "总共": "总共",
-  "条": "条",
+  "总共": "总共 ",
   "已选择": "已选择",
-  "项": "项",
   "批量删除": "批量删除",
   "名称": "名称",
   "类型": "类型",
@@ -98,40 +81,7 @@
   "刷新中...": "刷新中...",
   "选择图标": "选择图标",
   "更新": "更新",
-  "请检查输入项!": "请检查输入项!",
-
-
-  "写点东西在这里": "写点东西在这里",
-  "ECharts 入门示例": "ECharts 入门示例",
-  "销量": "销量",
-  "库存": "库存",
-  "衬衫": "衬衫",
-  "羊毛衫": "羊毛衫",
-  "雪纺衫": "雪纺衫",
-  "裤子": "裤子",
-  "高跟鞋": "高跟鞋",
-  "袜子": "袜子",
-  "柱状图一": "柱状图一",
-  "折线图一": "折线图一",
-  "折线图二": "折线图二",
-  "某站点用户访问来源": "某站点用户访问来源",
-  "纯属虚构": "纯属虚构",
-  "直接访问": "直接访问",
-  "邮件营销": "邮件营销",
-  "联盟广告": "联盟广告",
-  "视频广告": "视频广告",
-  "搜索引擎": "搜索引擎",
-  "访问来源": "访问来源",
-  "饼图一": "饼图一",
-  "饼图二": "饼图二",
-  "销量与库存": "销量与库存",
-  "用户访问来源": "用户访问来源",
-  "总销售额": "总销售额",
-  "访问量": "访问量",
-  "支付笔数": "支付笔数",
-  "运营活动效果": "运营活动效果"
-  
-
+  "请检查输入项!": "请检查输入项!"
 
 
 }
